{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 302,
  "lineage": "566a4fd7-1e04-9083-7856-566c35900dc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0230b0491df974250",
            "arn": "arn:aws:ec2:us-east-1:088668668282:elastic-ip/eipalloc-0230b0491df974250",
            "association_id": "eipassoc-039e97f4f63319db3",
            "domain": "vpc",
            "id": "eipalloc-0230b0491df974250",
            "network_border_group": "us-east-1",
            "network_interface": "eni-090c134cf40527394",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-32-193-83-100.compute-1.amazonaws.com",
            "public_ip": "32.193.83.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tkt-capstone-nat-eip"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-nat-eip",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:internet-gateway/igw-029bb9b15bfa5701f",
            "id": "igw-029bb9b15bfa5701f",
            "owner_id": "088668668282",
            "tags": {
              "Name": "tkt-capstone-igw"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-igw",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088668668282:loadbalancer/app/tkt-capstone-alb/51e8a6b0f4a9a28f",
            "arn_suffix": "app/tkt-capstone-alb/51e8a6b0f4a9a28f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tkt-capstone-alb-843667127.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:088668668282:loadbalancer/app/tkt-capstone-alb/51e8a6b0f4a9a28f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tkt-capstone-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0395ff60217115a1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e3fc4aca380c16b"
              },
              {
                "subnet_id": "subnet-03b5ab55d0c1b2715"
              }
            ],
            "subnets": [
              "subnet-00e3fc4aca380c16b",
              "subnet-03b5ab55d0c1b2715"
            ],
            "tags": {
              "Name": "tkt-capstone-alb"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-alb",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088668668282:listener/app/tkt-capstone-alb/51e8a6b0f4a9a28f/983d1ac5e72d20d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:088668668282:targetgroup/tkt-capstone-tg/9344be6f7573d2c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:088668668282:listener/app/tkt-capstone-alb/51e8a6b0f4a9a28f/983d1ac5e72d20d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:088668668282:loadbalancer/app/tkt-capstone-alb/51e8a6b0f4a9a28f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:088668668282:targetgroup/tkt-capstone-tg/9344be6f7573d2c1",
            "arn_suffix": "targetgroup/tkt-capstone-tg/9344be6f7573d2c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200,201,302",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:088668668282:targetgroup/tkt-capstone-tg/9344be6f7573d2c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:088668668282:loadbalancer/app/tkt-capstone-alb/51e8a6b0f4a9a28f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tkt-capstone-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tkt-capstone-tg"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-tg",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0230b0491df974250",
            "association_id": "eipassoc-039e97f4f63319db3",
            "connectivity_type": "public",
            "id": "nat-09238411ffa4a7819",
            "network_interface_id": "eni-090c134cf40527394",
            "private_ip": "10.0.1.211",
            "public_ip": "32.193.83.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b5ab55d0c1b2715",
            "tags": {
              "Name": "tkt-capstone-nat-gw"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-nat-gw",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:route-table/rtb-0cfb654d5ae44afb0",
            "id": "rtb-0cfb654d5ae44afb0",
            "owner_id": "088668668282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09238411ffa4a7819",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tkt-capstone-priv-rt"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-priv-rt",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:route-table/rtb-0081d6c6850060eee",
            "id": "rtb-0081d6c6850060eee",
            "owner_id": "088668668282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029bb9b15bfa5701f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tkt-capstone-pub-rt"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-pub-rt",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046484c1092ab59a5",
            "route_table_id": "rtb-0cfb654d5ae44afb0",
            "subnet_id": "subnet-048408b508591f7e1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d33bcaec9a7212ee",
            "route_table_id": "rtb-0cfb654d5ae44afb0",
            "subnet_id": "subnet-0a423ce394ec6aec1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e546b72ee9ca3ec",
            "route_table_id": "rtb-0081d6c6850060eee",
            "subnet_id": "subnet-03b5ab55d0c1b2715"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8eda47ca803ee7",
            "route_table_id": "rtb-0081d6c6850060eee",
            "subnet_id": "subnet-00e3fc4aca380c16b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:security-group/sg-0395ff60217115a1c",
            "description": "Allows HTTP inbound web traffic to Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0395ff60217115a1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tkt-capstone-alb-sg",
            "name_prefix": "",
            "owner_id": "088668668282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tkt-capstone-alb-sg"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-alb-sg",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:security-group/sg-08b46a7b71c85551f",
            "description": "Allows inbound traffic to application container ONLY from ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound internet access for image pulls \u0026 AWS service calls",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b46a7b71c85551f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow container port traffic strictly from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0395ff60217115a1c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tkt-capstone-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "088668668282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tkt-capstone-ecs-tasks-sg"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-ecs-tasks-sg",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:security-group/sg-02623c64084bda99d",
            "description": "Allows MySQL 3306 inbound traffic ONLY from ECS tasks security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound response traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02623c64084bda99d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL port strictly from ECS tasks",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b46a7b71c85551f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tkt-capstone-rds-sg",
            "name_prefix": "",
            "owner_id": "088668668282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tkt-capstone-rds-sg"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-rds-sg",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:subnet/subnet-048408b508591f7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048408b508591f7e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088668668282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tkt-capstone-private-subnet-1"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-private-subnet-1",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:subnet/subnet-0a423ce394ec6aec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a423ce394ec6aec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088668668282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tkt-capstone-private-subnet-2"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-private-subnet-2",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:subnet/subnet-03b5ab55d0c1b2715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b5ab55d0c1b2715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088668668282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tkt-capstone-public-subnet-1"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-public-subnet-1",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:subnet/subnet-00e3fc4aca380c16b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3fc4aca380c16b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088668668282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tkt-capstone-public-subnet-2"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-public-subnet-2",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            },
            "vpc_id": "vpc-01c2960d7587b714b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088668668282:vpc/vpc-01c2960d7587b714b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5c53088cf7650a4",
            "default_route_table_id": "rtb-059af92800c7716d5",
            "default_security_group_id": "sg-03ec8e91dfab4ef03",
            "dhcp_options_id": "dopt-0a3f40f7d15cd475d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c2960d7587b714b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059af92800c7716d5",
            "owner_id": "088668668282",
            "tags": {
              "Name": "tkt-capstone-vpc"
            },
            "tags_all": {
              "CostCenter": "Education-Capstone",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tkt-capstone-vpc",
              "Owner": "Capstone-Engineering",
              "Project": "TicketDesk"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}